uncommit mobile overflow fix

--- a/styles.css
+++ b/styles.css
@@ -192,11 +192,11 @@ button:hover {
     margin: 0 0.5rem ;
 }
 .parent-link {
-    width: 60%;
+    /* width: 60%;
     max-height: 55px;
     overflow: hidden;
     margin: auto;
-    display: block;
+    display: block; */
     color: inherit;
     padding: 0.75rem;
     animation: blink 1.5s 0.5s ease-in-out  infinite;
